style.css
body {
  font-family: Arial, Helvetica, sans-serif;
  text-align: center;
  margin: 0;
}

button {
  padding: 8px;
  margin: 4px;
  background-color: #98fb98;
  border-color: black;
  border-style: solid;
  border-width: 2px;
  border-radius: 8px;
  font-weight: bold;
}

button:hover {
  background-color: #008000;
  cursor: pointer;
}

button:disabled {
  background-color: #d87093;
  border-color: #808080;

}

input {
  display: flex;
  margin: 4px;
  padding: 8px;
  border-color: black;
  border-width: 2px;
  border-style: solid;
  border-radius: 8px;
  text-align: center;
}

.vertical {
  flex-direction: column;
}

.horizontal {
  flex-direction: row;
  justify-content: space-between;
}

.vertical > *,
.horizontal > * {
  flex: 1;
  margin: 4px;
  padding: 4px;
  border-width: 2px;
  border-style: solid;
  border-radius: 8px;
}

.container {
  display: flex;
}

.box {
  flex: 1;
  width: 100%;
  height: auto;
  aspect-ratio: 1.5;
  border-width: 2px;
  border-style: solid;
  border-radius: 8px;
}

.half {
  display: flex;
  flex-direction: column;
  width: 50%;
  padding: 0;
  margin: 0;
  border: 0;
  align-self: center;
}

.half * {
  flex: 1;
}

#main-container {
  display: flex;
  flex: 1;
  flex-direction: column;
  min-height: 100vh;
}

#title {
  background-color: #add8e6;
}

#player-choice,
#player-score {
  color: #008000;
}

#computer-choice,
#computer-score {
  color: #ff0000;
}

